# smol-rgb

./: .gitignore  .rustfmt.toml  CHANGELOG.md  Cargo.toml  LICENSE-MIT  README.md
.cargo/: mutants.toml
.github/workflows/: main.yml
.zed/: settings.json
src/: lib.rs
