[package]
name = "smol-rgb"
version = "0.6.2"
authors = ["Jonathan Spira <jjspira@gmail.com>"]
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/sanbox-irl/smol-rgb"
description = "A smol library for (s)Rgb color handling."
categories = ["rendering::data-formats", "game-development"]

[features]
default = ["std", "colors"]
colors = []
std = []
bytemuck = ["dep:bytemuck"]

[dependencies]
libm = { version = "0.2.1", optional = true }
bytemuck = { version = "1.25", optional = true }
serde = { version = "1.0", optional = true }
rand = { version = "0.10", optional = true }
thiserror = "2.0.18"

[dev-dependencies]
serde_json = "1.0"
bincode = { version = "2.0.1", features = ["serde"] }
serde_yaml = "0.9.34"
proptest = "1.0.0"
