[package]
name = "smol-rgb"
version = "0.7.0"
authors = ["Jonathan Spira <jjspira@gmail.com>"]
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/sanbox-irl/smol-rgb"
description = "A smol library for (s)Rgb color handling."
categories = ["rendering::data-formats", "game-development"]

[features]
default = ["std", "colors"]
colors = []
std = []

[dependencies]
libm = { version = "0.2.16", optional = true }
bytemuck = { version = "1.25", optional = true }
serde = { version = "1.0", optional = true }
rand = { version = "0.10", optional = true }

[dev-dependencies]
serde_json = "1.0"
bincode = { version = "2.0.1", features = ["serde"] }
serde_yaml = "0.9.34"
proptest = "1.0.0"
approx = "0.5.1"
